--- a/css/style.css
+++ b/css/style.css
@@ -3330,3 +3330,38 @@ td {
     left: 250px; }
   100% {
     left: 10px; } }
+
+
+.sg-container {
+  padding: 20px!important;
+}
+
+.list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.index-link {
+  text-align: center;
+  box-sizing: border-box;
+  display: block;
+  margin: 0;
+  min-width: 30%;
+  margin-bottom: 20px;
+  height: 50px;
+  padding: 15px 20px;
+  font-size: 20px!important;
+}
+
+@media (max-width: 1200px) {
+  .list {
+    flex-direction: column;
+  }
+  
+  .index-link {
+    width: 100%;
+  }
+}
